--- a/spring/spring-mvc-011-web-service/pom.xml
+++ b/spring/spring-mvc-011-web-service/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.itshaala</groupId>
-    <artifactId>spring-mvc-010-web-service</artifactId>
+    <artifactId>spring-mvc-011-web-service</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>spring-mvc-010-web-service</name>
+    <name>spring-mvc-011-web-service Maven Webapp</name>
     <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
@@ -50,6 +50,6 @@
 
     </dependencies>
     <build>
-        <finalName>spring-mvc-010-web-service</finalName>
+        <finalName>spring-mvc-011-web-service</finalName>
     </build>
 </project>
